#Prometheus nlp fixes